--- a/hire.html
+++ b/hire.html
@@ -394,7 +394,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -427,7 +427,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -460,7 +460,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -500,7 +500,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -533,7 +533,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -566,7 +566,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -606,7 +606,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -639,7 +639,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -672,7 +672,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -712,7 +712,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -745,7 +745,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
@@ -778,7 +778,7 @@
                                 <p style="color:#666666;">Connect with a 3D printing design expert to bring your idea to life.</p>
                                 <div class="row">
                                     <div class="col-md-12">
-                                    <a href="#" class="btn btn-product">Learn More</a></div>
+                                    <a href="designer.html" class="btn btn-product">Learn More</a></div>
                                 </div>
                                 <br><br>
                                 <div class="row">
