--- a/index.html
+++ b/index.html
@@ -348,21 +348,21 @@
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <a href="#"><h4>Hire a Designer</h4></a><br>
+                        <a href="hire.html"><h4>Hire a Designer</h4></a><br>
                         <p class="text-muted">Work with our Community to design that something special</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Easy Creators</h4></a><br>
+                        <a href="easy3D.html"><h4>Easy Creators</h4></a><br>
                         <p class="text-muted">Little yo no skill needed to amke peronalized gifts</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
                         <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <a href=""><h4>Upload Your Design</h4></a><br>
+                        <a href="make.html"><h4>Upload Your Design</h4></a><br>
                         <p class="text-muted">You've got the skills and 3D file ready to go!</p>
                     </div>
                 </div>
@@ -374,7 +374,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                    <div class="hover">
+                    <div>
                         <img class="img-responsive" src="Img/moz.png" alt="">   
                     </div>
                 </div>
@@ -383,7 +383,7 @@
                         <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
                         <div class="overlay">
                             <h2>Customizable</h2>
-                            <button class="info"><a href="jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
+                            <button class="info"><a href="category/jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
                         </div>         
                     </div>
                 </div>
@@ -399,7 +399,7 @@
                         <img class="img-responsive" src="img/home-bg.jpg" alt="">
                         <div class="overlay">
                             <h2>Jewellery</h2>
-                            <button class="info"><a href="jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
+                            <button class="info"><a href="category/jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
                         </div>         
                     </div>
                 </div>
@@ -408,7 +408,7 @@
                         <img class="img-responsive" src="img/home-bg.jpg" alt="">
                         <div class="overlay">
                             <h2>Accessories</h2>
-                            <button class="info"><a href="jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
+                            <button class="info"><a href="category/Accessories.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
                         </div>         
                     </div>
                 </div>
@@ -418,7 +418,7 @@
                         <img class="img-responsive" src="img/home-bg.jpg" alt="">
                         <div class="overlay">
                             <h2>Games</h2>
-                            <button class="info"><a href="jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
+                            <button class="info"><a href="category/Games.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
                         </div>         
                     </div>
                 </div>
@@ -434,7 +434,7 @@
                         <img class="img-responsive" src="img/post-bg.jpg" alt="">
                         <div class="overlay">
                             <h2>Art</h2>
-                            <button class="info"><a href="jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
+                            <button class="info"><a href="category/Art.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
                         </div>         
                     </div>
                 </div>
@@ -443,7 +443,7 @@
                         <img class="img-responsive" src="img/post-bg.jpg" alt="">
                         <div class="overlay">
                             <h2>Miniatures</h2>
-                            <button class="info"><a href="jewellery.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
+                            <button class="info"><a href="category/Miniatures.html" style="color:white; text-decoration:none;"><strong>Shop Now</strong></a></button>
                         </div>         
                     </div>
                 </div>
