--- a/make.html
+++ b/make.html
@@ -258,77 +258,89 @@
 
         <!-- Header -->
         <section class="no-padding" id="portfolio">
-            <div class="container-fluid">
-                <div class="row no-gutter popup-gallery">
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                        <div class="hover ehover5">
-                            <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                            <div class="overlay">
-                                <h2>Wedding</h2>
-                                <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                            </div>       
+                <div class="container-fluid">
+                    <div class="row no-gutter popup-gallery">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <div class="overlay">
+                                    <h2>Wedding</h2>
+                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                </div>       
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                        <div class="hover ehover5">
-                            <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                            <div class="overlay">
-                                <h2>Customizable</h2>
-                                <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                            </div>         
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="no-padding" id="portfolio">
-            <div class="container-fluid">
-                <div class="row no-gutter popup-gallery">
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                        <div class="hover ehover5">
-                            <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                            <div class="overlay">
-                                <h2>Jewellery</h2>
-                                <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                            </div>         
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                        <div class="hover ehover5">
-                            <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                            <div class="overlay">
-                                <h2>Accessories</h2>
-                                <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                            </div>         
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                        <div class="hover ehover5">
-                            <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
-                            <div class="overlay">
-                                <h2>Games</h2>
-                                <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
-                            </div>         
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <div class="overlay">
+                                    <h2>Customizable</h2>
+                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                </div>         
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section class="no-padding" id="portfolio">
-            <div class="container-fluid">
-                <div class="row no-gutter popup-gallery">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <div class="hover ehover5">
-                            <img class="img-responsive" src="Img/portfolio/thumbnails/7.jpg" alt="">
-                            <div class="overlay">
-                                <h2>YOUR MODEL</h2>
-                                <button class="info" data-toggle="modal" data-target="#modal1" style="font-size:28px;">UPLOAD YOUR MODEL</button>
-                            </div>         
+            </section>
+
+            <section class="no-padding" id="portfolio">
+                <div class="container-fluid">
+                    <div class="row no-gutter popup-gallery">
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
+                                <div class="overlay">
+                                    <h2>Jewellery</h2>
+                                    <button class="info" data-toggle="modal" data-target="category/jewellery.html">Shop Now</button>
+                                </div>         
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
+                                <div class="overlay">
+                                    <h2>Accessories</h2>
+                                    <button class="info" data-toggle="modal" data-target="category/Accessories.html">Shop Now</button>
+                                </div>         
+                            </div>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
+                                <div class="overlay">
+                                    <h2>Games</h2>
+                                    <button class="info" data-toggle="modal" data-target="category/Games.html">Shop Now</button>
+                                </div>         
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+
+            <section class="no-padding" id="portfolio">
+                <div class="container-fluid">
+                    <div class="row no-gutter popup-gallery">
+                        <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/download3.jpg" alt="">
+                                <div class="overlay">
+                                    <h2>Art</h2>
+                                    <button class="info" data-toggle="modal" data-target="category/Art.html">Shop Now</button>
+                                </div>         
+                            </div>
+                        </div>
+                        <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/download1.jpg" alt="">
+                                <div class="overlay">
+                                    <h2>Your Model</h2>
+                                    <button class="info" data-toggle="modal" data-target="make.html">Upload Your Own Model</button>
+                                </div>         
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         <br><br><br>
         <section id="services" class="services">
             <div class="container">
@@ -401,7 +413,7 @@
                 <div class="row no-gutter popup-gallery ">
                     <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
                         <div class="hovereffect">
-                            <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <img class="img-responsive" src="Img/portfolio/thumbnails/8.jpg" alt="">
                             <div class="overlay">
                                 <h2>PRODUCT NAME</h2>
                                 <a class="info" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">VIEW MORE DETAILS</a>
@@ -505,12 +517,12 @@
         <div class="intro-header1">
             <div class="col-lg-6 img">
                 <br><br><br><br>
-                <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
+                <a href="hire.html" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
                 <br><br><br><br>
             </div>
             <div class="col-lg-6 img">
                 <br><br><br><br>
-                <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
+                <a href="make.html" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
                 <br><br><br><br>
             </div>
             <div class="clearfix"></div>
