--- a/shop.html
+++ b/shop.html
@@ -341,7 +341,7 @@
                                 <img class="img-responsive" src="Img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Jewellery</h2>
-                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                    <button class="info" data-toggle="modal" data-target="category/jewellery.html">Shop Now</button>
                                 </div>         
                             </div>
                         </div>
@@ -350,7 +350,7 @@
                                 <img class="img-responsive" src="Img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Accessories</h2>
-                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                    <button class="info" data-toggle="modal" data-target="category/Accessories.html">Shop Now</button>
                                 </div>         
                             </div>
                         </div>
@@ -360,7 +360,7 @@
                                 <img class="img-responsive" src="Img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Games</h2>
-                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                    <button class="info" data-toggle="modal" data-target="category/Games.html">Shop Now</button>
                                 </div>         
                             </div>
                         </div>
@@ -376,7 +376,7 @@
                                 <img class="img-responsive" src="Img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Art</h2>
-                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                    <button class="info" data-toggle="modal" data-target="category/Art.html">Shop Now</button>
                                 </div>         
                             </div>
                         </div>
@@ -385,7 +385,7 @@
                                 <img class="img-responsive" src="Img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Miniatures</h2>
-                                    <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
+                                    <button class="info" data-toggle="modal" data-target="category/Miniatures.html">Shop Now</button>
                                 </div>         
                             </div>
                         </div>
@@ -526,12 +526,12 @@
         <div class="intro-header1">
             <div class="col-lg-6 img">
                 <br><br><br><br>
-                <a href="" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
+                <a href="hire.html" style="color:white; text-decoration:none;"><h2>HIRE A DESIGNER</h2></a>
                 <br><br><br><br>
             </div>
             <div class="col-lg-6 img">
                 <br><br><br><br>
-                <a href="" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
+                <a href="blog.html" style="color:white; text-decoration:none;"><h2>SHARE YOUR STORY</h2></a>
                 <br><br><br><br>
             </div>
             <div class="clearfix"></div>
